sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:5: error: not found: value getNombreValeur
	for(i<-getNombreValeur()-2 to 0){
               ^