sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.code
def bubbleSort3() {
	var i=0
	var j=0
	for(i<-getNombreValeur()-2 to 0){
	for(j<-0 to i){
		if(plusPetit(j:Int,j+1:Int)){
			echange(j,j+1)			
		}
	}
	return
}
}
